--- a/study-log/index.html
+++ b/study-log/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>업무 학습 일지</title>
+  <title>업무 능력 향상 노트</title>
   <link rel="icon" href="/static/favicon.ico" />
   <link rel="stylesheet" href="/static/style.css" />
   <style>
@@ -52,7 +52,7 @@
 
 <body>
   <main>
-    <h1>업무 학습 일지</h1>
+    <h1>업무 능력 향상 노트</h1>
     <p class="muted">·과원배치 남은 기간: 2025.11.12.(수)~2025.12.31.(수)</p>
     <hr />
 
@@ -74,25 +74,29 @@
     </section>
 
     <section class="section">
-      <h2>2025년 11월 업무 학습 내역</h2>
-      <p class="muted">·업무 처리 중 알게 된 것들</p>
+      <h2>업무 처리 중 알게 된 것들</h2>
+      <p class="muted">·나중에 찾기 쉽도록 기록</p>
+      <hr/>
 
-      <p>2025.11.15.(금)</p>
-      <p class="muted">·유치원 시간제근무 기간제교사 사업 운영계획 재확인: 계약서에 보수 관련 명시하지 않은 부분 발견함.</p>
+      <p><b>운동부지도자 수익자부담금 </b></p>
+      <p class="muted">
+        : 통상임금에 포함하지 않을지 여부는 학교 자체 협의하되 일관적으로 업무 처리할 필요는 있음<br/>
+        포함하지 않기로 함. 2026년 계약서에 해당 내용 포함하기. <br/>
+      </p>
     </section>
 
     <section class="section">
-      <h2>2025년 12월 업무 학습 내역</h2>
+      <h2>운영계획 및 업무편람 확인</h2>
       <p>(작성 예정)<br/><br/></p>
     </section>
 
     <section class="section">
-      <h2>2026년 1월 업무 학습 내역</h2>
+      <h2>기타</h2>
       <p>(작성 예정)<br/><br/></p>
     </section>
 
     <section class="section">
-      <h2>2026년 2월 업무 학습 내역</h2>
+      <h2>기타 2역</h2>
       <p>(작성 예정)<br/><br/></p>
     </section>
 
