--- a/preschool-parttime-contract-teacher/index.html
+++ b/preschool-parttime-contract-teacher/index.html
@@ -412,7 +412,7 @@
     <section class="card">
       <h2>9. 직종별 구비서류 안내</h2>
       <p class="hint">
-        ·2025 강원특별자치도교육청 계약제교원 운영 지침 기준 요약.<br/>
+        ·2025 **도교육청 계약제교원 운영 지침 기준 요약.<br/>
         ·실제 공고 시 제시되는 서류 목록과 차이가 있으면 공고문을 우선.
       </p>
 
@@ -442,6 +442,7 @@
     <script src="/static/global-loader.js?v=1"></script>
 </body>
 </html>
+
 
 
 
