--- a/annual-leave-calculator/index.html
+++ b/annual-leave-calculator/index.html
@@ -602,5 +602,13 @@ full_pipeline("${ruleId}", svc_js, wage_js, ${granted}, ${used})
       }
     });
   </script>
+      <a class="btn" href="/" style="margin-top:10px;">메인으로 돌아가기</a>
+  
+<footer style="text-align:center; margin-top:15px; color:#444;">
+  제작자: 씩씩하고 귀여운 고주무관 · Contact: edusproutcomics@naver.com · 개인적인 토이 프로젝트입니다.
+</footer>
+
+  <script src="/static/global-loader.js?v=1"></script>
+  
 </body>
 </html>
