--- a/user-fee-ratio/index.html
+++ b/user-fee-ratio/index.html
@@ -13,8 +13,8 @@
       <p class="sub">
         ·순환함수 발생으로 수치해석으로 근사치 구함.<br/>
         ·계약서 상 규정: 수익자부담금 보수 지급에 따른 추가적인 발생분에 대한 재원 역시 수익자부담으로 한다.<br/>
-        ·추가발생분: 통상임금 미산입함. (개발자의 근무지 기준)
-        ·추가발생분에 퇴직연금이랑 연차미사용 수당도 미반영됨. (아래에 항목은 있으나 0원으로 표시되게 함)
+        ·추가발생분: 통상임금 미산입함. (개발자의 근무지 기준)<br/>
+        ·추가발생분에 퇴직연금이랑 연차미사용 수당도 미반영됨. (아래에 항목은 있으나 0원으로 표시되게 함)<br/>
       </p>
     </div>
   </header>
@@ -141,12 +141,15 @@
         ·원단위 절삭함.<br />
       </p>
     </section>
-  </main>
+
+  <a href="/" class="btn">메인으로 돌아가기</a>
 
   <footer style="text-align:center; margin-top:15px; color:#444;">
     제작자: 씩씩하고 귀여운 고주무관 · Contact: edusproutcomics@naver.com · 개인적인 토이 프로젝트입니다.
   </footer>
 
+    
+  </main>
   <script src="script.js"></script>
    <script src="/static/global-loader.js?v=1"></script>
 </body>
