--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>[배포전] 고주무관의 업무 효율화 웹페이지</title>
 
   <link rel="icon" href="/static/favicon.ico" />
-  <link rel="stylesheet" href="/static/style.css" />
+<link rel="stylesheet" href="./static/style.css?v=251212-1">
+
 </head>
 
 <body>
